(CFACT-232) Add dependency include dirs to LEATHERMAN_INCLUDE_DIRS
Without this, including one of our headers which includes a dependency
header will fail, since the dependency header will not be on the
include path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,10 +32,10 @@ add_leatherman_dir(locale)
 add_leatherman_dir(logging)
 
 list(REVERSE LEATHERMAN_LIBRARIES)
+list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
 
 export_var(LEATHERMAN_INCLUDE_DIRS)
 export_var(LEATHERMAN_LIBRARIES)
-
 
 if(LEATHERMAN_ENABLE_TESTING)
     enable_testing()
