(LTH-7) Fix LEATHERMAN_LIBRARIES ordering
Without this change, Windows release builds use debug libraries because
the optimized/debug labeling CMake adds in the LIBS variables gets
reversed. Insert libraries in reverse order rather than reversing at the
end so we get the labels in the correct order.

--- a/LeathermanConfig.cmake.in
+++ b/LeathermanConfig.cmake.in
@@ -13,6 +13,8 @@ foreach(component ${Leatherman_FIND_COMPONENTS})
     string(TOUPPER "${component}" id_upper)
     set(exclude_var "LEATHERMAN_EXCLUDE_${id_upper}")
     set(include_var "LEATHERMAN_${id_upper}_INCLUDE")
+    set(lib_var "LEATHERMAN_${id_upper}_LIB")
+    set(deps_var "LEATHERMAN_${id_upper}_DEPS")
     set(libs_var "LEATHERMAN_${id_upper}_LIBS")
     debug("Exclude variable ${exclude_var} is ${${exclude_var}}")
     if(${${exclude_var}})
@@ -24,10 +26,13 @@ foreach(component ${Leatherman_FIND_COMPONENTS})
         debug("* include is ${${include_var}}")
         debug("* library is ${${libs_var}}")
         list(APPEND LEATHERMAN_INCLUDE_DIRS ${${include_var}})
-        list(APPEND LEATHERMAN_LIBRARIES ${${libs_var}})
+        if (NOT "" STREQUAL "${${lib_var}}")
+            # Prepend leatherman libraries, as later libs may depend on earlier libs.
+            list(INSERT LEATHERMAN_LIBS 0 ${${lib_var}})
+        endif()
+        list(APPEND LEATHERMAN_DEPS ${${deps_var}})
     endif()
 endforeach()
 
-list(REVERSE LEATHERMAN_LIBRARIES)
 list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
 set(LEATHERMAN_MODULE_DIR "${current_directory}/cmake")
