--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,10 @@ if(WIN32)
 endif()
 
 
-list(REVERSE LEATHERMAN_LIBRARIES)
+# Ensure no LEATHERMAN_LIBS are in LEATHERMAN_DEPS, LEATHERMAN_LIBS should be declared in dependency
+# order above, and we don't want them to come after other dependencies.
+list(REMOVE_ITEM LEATHERMAN_DEPS ${LEATHERMAN_LIBS})
+list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
 list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
 
 export_var(LEATHERMAN_INCLUDE_DIRS)
