(LTH-22) Add terminal colors on Windows
Uses SetConsoleTextAttribute to add color to log messages on Windows when
writing to a stdout or stderr stream.

The colorize functions were changed to account for Windows updating a
global rather than using a control string, so they now take an ostream to
colorize. Tests were updated to account for that.

To add color on Windows on a portion of a log line, log formatting had to
be moved down to the log backend. Adding line numbers were moved to an
attribute that is written as part of the backend, so it can no longer be
tested by creating a custom backend; therefore the line number tests were
removed.

--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -11,6 +11,12 @@ if (BUILDING_LEATHERMAN)
     leatherman_logging_line_numbers()
 endif()
 
-add_leatherman_library(src/logging.cc)
-add_leatherman_test(tests/logging.cc tests/logging_lines.cc)
+if(WIN32)
+    set(PLATFORM_SRCS "src/windows/logging.cc")
+else()
+    set(PLATFORM_SRCS "src/posix/logging.cc")
+endif()
+
+add_leatherman_library(src/logging.cc ${PLATFORM_SRCS})
+add_leatherman_test(tests/logging.cc)
 add_leatherman_headers(inc/leatherman)
