Deleted one line too many

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_leatherman_dir(file_util)
 add_leatherman_dir(util)
 if(WIN32)
   add_leatherman_dir(windows)
+endif()
 
 
 list(REVERSE LEATHERMAN_LIBRARIES)
