added some utility functions from cthun-agent

--- a/file_util/CMakeLists.txt
+++ b/file_util/CMakeLists.txt
@@ -4,6 +4,12 @@ add_leatherman_deps("${Boost_FILESYSTEM_LIBRARY}")
 add_leatherman_includes("${Boost_INCLUDE_DIRS}")
 
 leatherman_dependency(nowide)
+leatherman_dependency(logging)
+
+if (BUILDING_LEATHERMAN)
+    leatherman_logging_namespace("leatherman.logging")
+    leatherman_logging_line_numbers()
+endif()
 
 add_leatherman_library("src/directory.cc" "src/file.cc")
 add_leatherman_headers("inc/leatherman")
