Added some utility functions from pegasus, as well as some unit tests

--- a/file_util/CMakeLists.txt
+++ b/file_util/CMakeLists.txt
@@ -13,3 +13,4 @@ endif()
 
 add_leatherman_library("src/directory.cc" "src/file.cc")
 add_leatherman_headers("inc/leatherman")
+add_leatherman_test(tests/file_utils_test.cc)
