(LTH-13) Extract facter's execution functions to Leatherman
Extracts facter's execution class and various associated utilities to Leatherman.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ if(WIN32)
   add_leatherman_dir(windows)
 endif()
 add_leatherman_dir(dynamic_library)
+add_leatherman_dir(execution)
 
 
 # Ensure no LEATHERMAN_LIBS are in LEATHERMAN_DEPS, LEATHERMAN_LIBS should be declared in dependency
