(LTH-27) Add unit tests for curl wrapper library
This commit adds a suite of tests for Leatherman's
curl wrapper library. Tests utilize a new mock_curl struct
which mocks the libcurl API. We link against it instead of
real libcurl for testing purposes.

--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -8,6 +8,14 @@ if (CURL_STATIC)
     endif()
 endif()
 
+# Namespacing curl libs so we don't pollute the global namespace
+# Needed to properly link libmock_curl in tests
+set(LEATHERMAN_INT_CURL_LIBS ${CURL_LIBRARIES})
+set(LEATHERMAN_TEST_CURL_LIB mock_curl)
+
+export_var(LEATHERMAN_INT_CURL_LIBS)
+export_var(LEATHERMAN_TEST_CURL_LIB)
+
 add_leatherman_includes("${CURL_INCLUDE_DIRS}")
 
 leatherman_dependency(logging)
@@ -21,3 +29,18 @@ endif()
 
 add_leatherman_library(src/client.cc src/request.cc src/response.cc)
 add_leatherman_headers(inc/leatherman)
+
+add_leatherman_test(tests/client_test.cc tests/request_test.cc tests/response_test.cc)
+
+# Create a mock curl library; it needs to be separate to allow for dllimport in the client source
+if (CURL_STATIC)
+    set(CURL_LINK STATIC)
+else()
+    set(CURL_LINK SHARED)
+endif()
+add_library(mock_curl ${CURL_LINK} tests/mock_curl.cc)
+set_target_properties(mock_curl PROPERTIES COMPILE_FLAGS "${LEATHERMAN_CXX_FLAGS}")
+
+if (COVERALLS)
+    target_link_libraries(mock_curl gcov)
+endif()
