(maint) Move CURL_STATIC to Leatherman
Without this change, no option is provided within Leatherman to link
against a static build of libcurl. On Windows, setting CURL_STATICLIB is
required to build against a static build of libcurl to resolve symbols.

Move the CURL_STATIC option and basic configuration from Facter to
Leatherman.

--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -1,9 +1,18 @@
 find_package(CURL REQUIRED)
 
+if (CURL_STATIC)
+    add_definitions(-DCURL_STATICLIB)
+    if (WIN32)
+        # Linking statically on Windows requires some extra libraries.
+        set(CURL_DEPS wldap32.lib ws2_32.lib)
+    endif()
+endif()
+
 add_leatherman_includes("${CURL_INCLUDE_DIRS}")
 
 leatherman_dependency(logging)
 leatherman_dependency(util)
+add_leatherman_deps(${CURL_LIBRARIES} ${CURL_DEPS})
 
 if (BUILDING_LEATHERMAN)
     leatherman_logging_namespace("leatherman.curl")
@@ -12,5 +21,3 @@ endif()
 
 add_leatherman_library(src/client.cc src/request.cc src/response.cc)
 add_leatherman_headers(inc/leatherman)
-
-target_link_libraries(leatherman_curl "${CURL_LIBRARIES}")
