(maint) Add option to build dynamic libraries
It's quite likely we'll want to build dynamic libraries of Leatherman
modules. Add that capability as an option to build instead of static
libraries, disabled by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ defoption(LEATHERMAN_DEFAULT_ENABLE "Should Leatherman libraries all be built by
 defoption(LEATHERMAN_DEBUG "Enable verbose logging messages from leatherman macros" FALSE)
 defoption(LEATHERMAN_ENABLE_TESTING "Build the leatherman test binary" ${LEATHERMAN_DEFAULT_ENABLE})
 defoption(LEATHERMAN_INSTALL "Install the leatherman libraries and headers" ${LEATHERMAN_DEFAULT_ENABLE})
+defoption(LEATHERMAN_SHARED "Create shared libraries instead of static" FALSE)
 
 set(BUILDING_LEATHERMAN TRUE)
 
