(LTH-31) Fix using header-only Leatherman libs
When using only header-only Leatherman libraries, some variables aren't
initialized. That causes problem when trying to perform list operations
on them. Guard the list operations on those variables, so we can
successfully use Leatherman for header-only libraries.

Catch in particular doesn't even set LEATHERMAN_INCLUDE_DIRS, so also
guard operations on that variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,15 @@ add_leatherman_dir(ruby)
 
 # Ensure no LEATHERMAN_LIBS are in LEATHERMAN_DEPS, LEATHERMAN_LIBS should be declared in dependency
 # order above, and we don't want them to come after other dependencies.
-list(REMOVE_ITEM LEATHERMAN_DEPS ${LEATHERMAN_LIBS})
-list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
-list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
+if (LEATHERMAN_LIBS)
+    list(REMOVE_ITEM LEATHERMAN_DEPS ${LEATHERMAN_LIBS})
+endif()
+if (LEATHERMAN_LIBS OR LEATHERRMAN_DEPS)
+    list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
+endif()
+if (LEATHERMAN_INCLUDE_DIRS)
+    list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
+endif()
 
 export_var(LEATHERMAN_INCLUDE_DIRS)
 export_var(LEATHERMAN_LIBRARIES)
