--- a/LeathermanConfig.cmake.in
+++ b/LeathermanConfig.cmake.in
@@ -34,7 +34,11 @@ foreach(component ${Leatherman_FIND_COMPONENTS})
     endif()
 endforeach()
 
-set(LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
+if (LEATHERMAN_LIBS OR LEATHERMAN_DEPS)
+    set(LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
+endif()
 
-list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
+if (LEATHERMAN_INCLUDE_DIRS)
+    list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
+endif()
 set(LEATHERMAN_MODULE_DIR "${current_directory}/cmake")
