(LTH-58) Add message localization and translation support (i18n)
Adds i18n support via Boost.Locale. Adds several facilities to make this
easy to use, while supporting safe fall-back on platforms where
Boost.Locale doesn't work (Solaris and AIX).

----
Adds a macro, and uses it in Leatherman, to create a target to generate
a translation template for use with gettext. That file will only be
regenerated when the source changes. New messages will be merged into
the existing translation template.

----
Message catalogs for languages can be generated and kept up-to-date by
setting `LEATHERMAN_LOCALES="lang1;lang2;etc"` during cmake
configuration. This is done via a new build target.

----
Adds the `leatherman::locale::format` helper, to be used in place of
`boost::format`. It translates the string passed in, avoiding the
`boost::locale::format(boost::locale::translate(...))` pattern. It's
implemented via a helper class that allows specifying a locale domain
for string translation.

Use a hash_map to keep track of locales by domain. Translation should
use the locale::translate or locale::format helper, which defaults to
the domain of the current project.

----
Allow setting locale lookup paths for testing in projects using
installed Leatherman. Without this change the location would be
hard-coded into installed Leatherman objects.

Use CMAKE_BINARY_DIR to put all .mo files in the same location in a
build, so tests can easily find all translation files.

----
Adds a LEATHERMAN_ENABLE_LOCALE option to control when gettext and
Boost.Locale should be used. Disabled by default on Solaris and AIX.

Also make whether leatherman::locale::format uses boost::locale::format
or boost::format configurable by the project; they use different
substitution strings, so using boost::locale::format is opt-in. The
boost::format behavior will translate from boost::locale::format
substitution characters so the same string can be used in a project
using the i18n support on platforms that don't c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,11 @@ if (LEATHERMAN_TOPLEVEL)
 endif()
 
 add_definitions(${LEATHERMAN_DEFINITIONS})
+add_definitions(-DLEATHERMAN_LOCALE_INSTALL="${CMAKE_INSTALL_PREFIX}/share/locale")
+
+file(GLOB_RECURSE ALL_LEATHERMAN_SOURCES */src/*.cc */inc/*.hpp)
+gettext_templates(${CMAKE_CURRENT_SOURCE_DIR}/locales ${ALL_LEATHERMAN_SOURCES})
+gettext_compile(${CMAKE_CURRENT_SOURCE_DIR}/locales share/locale)
 
 add_leatherman_dir(catch EXCLUDE_FROM_VARS)
 add_leatherman_dir(nowide)
@@ -50,7 +55,6 @@ endif()
 add_leatherman_dir(dynamic_library)
 add_leatherman_dir(execution)
 add_leatherman_dir(ruby)
-
 
 # Ensure no LEATHERMAN_LIBS are in LEATHERMAN_DEPS, LEATHERMAN_LIBS should be declared in dependency
 # order above, and we don't want them to come after other dependencies.
@@ -79,7 +83,6 @@ if(LEATHERMAN_ENABLE_TESTING)
 
     add_cppcheck_dirs(${LEATHERMAN_CPPCHECK_DIRS})
 
-    file(GLOB_RECURSE ALL_LEATHERMAN_SOURCES */src/*.cc */inc/*.hpp)
     add_cpplint_files(${ALL_LEATHERMAN_SOURCES})
 
     # If we're toplevel we want to own these targets. If not we assume
@@ -100,6 +103,7 @@ if (LEATHERMAN_INSTALL)
         cmake/leatherman.cmake
         cmake/options.cmake
         cmake/leatherman_config.cmake
+        cmake/normalize_pot.cmake
     )
     set(INSTALL_LOC "lib${LIB_SUFFIX}/cmake/leatherman")
     install(FILES ${CMAKE_FILES} DESTINATION "${INSTALL_LOC}/cmake/")
