(maint) Install git description cmake helpers
The GetGitRevisionDescription cmake files were not being installed along
with the other cmake files, which prevented them from being used when
cmake was installed to the system. This commit includes them along with
other shared cmake library files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ endif()
 if (LEATHERMAN_INSTALL)
     set(CMAKE_FILES
         cmake/cflags.cmake
+        cmake/GetGitRevisionDescription.cmake
+        cmake/GetGitRevisionDescription.cmake.in
         cmake/leatherman.cmake
         cmake/options.cmake
         cmake/leatherman_config.cmake
