--- a/.travis.yml
+++ b/.travis.yml
@@ -52,3 +52,13 @@ env:
     - TRAVIS_TARGET=CPPCHECK
     - TRAVIS_TARGET=RELEASE
     - TRAVIS_TARGET=DEBUG
+deploy:
+  provider: releases
+  api_key:
+    secure: iAY48frWHgrNy2kU59JTeZPUQ5gJNGgm9orZuKQU+PGhmmP1nwj/wVMqiNGBz5cTz9YSr5T5/vf1RlppyyMlhqmrLgf9AoZHPGN07Ehwd3RXuTixl05/MThsidvdWkPqXjnQ3zKmAgcuzBMkrRSchkcLB0KztPUfMow75tL30rw=
+  file: leatherman.tar.gz
+  skip_cleanup: true
+  on:
+    repo: puppetlabs/leatherman
+    tags: true
+    condition: '"$TRAVIS_TARGET" == "RELEASE"'
