--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,22 @@ install:
   - ps: 7z.exe x "curl-7.42.1-x86_64_mingw-w64_4.8.3_win32_seh.7z" -oC:\tools | FIND /V "ing "
 
 build_script:
-  - ps: cmake -G "MinGW Makefiles" -DBOOST_ROOT="C:\tools\boost_1_57_0-x86_64_mingw-w64_4.8.3_win32_seh" -DBOOST_STATIC=ON -DCMAKE_PREFIX_PATH="C:\tools\curl-7.42.1-x86_64_mingw-w64_4.8.3_win32_seh" -DCURL_STATIC=ON .
+  - ps: cmake -G "MinGW Makefiles" -DBOOST_ROOT="C:\tools\boost_1_57_0-x86_64_mingw-w64_4.8.3_win32_seh" -DBOOST_STATIC=ON -DCMAKE_PREFIX_PATH="C:\tools\curl-7.42.1-x86_64_mingw-w64_4.8.3_win32_seh" -DCMAKE_INSTALL_PREFIX=C:\tools\leatherman -DCURL_STATIC=ON .
   - ps: mingw32-make install
+  - ps: 7z.exe a -t7z leatherman.7z C:\tools\leatherman\
 
 test_script:
   - ps: ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
+
+artifacts:
+  - path: leatherman.7z
+    name: leatherman.7z
+
+deploy:
+  description: Leatherman build from AppVeyor
+  provider: GitHub
+  auth_token:
+    secure: pSPKogvXGsTpt4hZPOWEMPpiwcYCKpTuQODqmsdN34Av6nN640H0DPiK/sKwDhMP
+  artifact: leatherman.7z
+  on:
+    appveyor_repo_tag: true
