(maint) Use leatherman_deps instead of target_link_libraries in windows
target_link_libraries will cause failures when leatherman projects are
pulled in via find_package.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -21,8 +21,4 @@ set(WINDOWS_UTIL_SOURCES
 
 add_leatherman_library(${WINDOWS_UTIL_SOURCES})
 add_leatherman_headers(inc/leatherman)
-
-target_link_libraries(leatherman_windows 
-	Wbemuuid.lib
-	userenv.lib
-)
+add_leatherman_deps(Wbemuuid.lib userenv.lib)
