(LTH-65) Switch to nowide author's Github repo
The original source was pulled in with CMakeLists.txt that was all put
on Github under https://github.com/halex2005/boost-nowide. The original
author has put up a version on Github with new fixes at
https://github.com/artyom-beilis/nowide. Switch to that version, SHA
eafe4bde1516a2113af992b6e589a6caa2365e89, to get new fixes and C++11
interfaces.

--- a/nowide/CMakeLists.txt
+++ b/nowide/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Boost 1.54 REQUIRED)
 
-add_leatherman_includes(${Boost_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/../vendor/boost-nowide")
-add_leatherman_headers(../vendor/boost-nowide/boost)
+add_leatherman_includes(${Boost_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/../vendor/nowide/include")
+add_leatherman_headers(../vendor/nowide/include/boost)
 if(WIN32)
-    add_leatherman_library(../vendor/boost-nowide/libs/nowide/src/iostream.cpp)
+    add_leatherman_library(../vendor/nowide/src/iostream.cpp)
 endif()
