--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if(LEATHERMAN_ENABLE_TESTING)
 
     add_cppcheck_dirs(${LEATHERMAN_CPPCHECK_DIRS})
 
-    file(GLOB_RECURSE ALL_LEATHERMAN_SOURCES */src/*.cpp */src/*.cc */src/*.h */src/*.hpp */inc/*.hpp */inc/*.h)
+    file(GLOB_RECURSE ALL_LEATHERMAN_SOURCES */src/*.cc */inc/*.hpp)
     add_cpplint_files(${ALL_LEATHERMAN_SOURCES})
 
     # If we're toplevel we want to own these targets. If not we assume
