(maint) Only use curl test library if we're building curl support
Previously, we were always attempting to munge the leatherman library
list to switch to our mock curl. this is incorrect if we're not
building curl in the first place.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,8 +2,11 @@ include_directories(${LEATHERMAN_CATCH_INCLUDE} ${LEATHERMAN_INCLUDE_DIRS})
 add_executable(leatherman_test main.cc ${LEATHERMAN_TEST_SRCS})
 
 set(LEATHERMAN_TEST_LIBS ${LEATHERMAN_LIBRARIES})
-list(REMOVE_ITEM LEATHERMAN_TEST_LIBS ${LEATHERMAN_INT_CURL_LIBS})
-list(APPEND LEATHERMAN_TEST_LIBS ${LEATHERMAN_TEST_CURL_LIB})
+
+if (LEATHERMAN_USE_CURL)
+    list(REMOVE_ITEM LEATHERMAN_TEST_LIBS ${LEATHERMAN_INT_CURL_LIBS})
+    list(APPEND LEATHERMAN_TEST_LIBS ${LEATHERMAN_TEST_CURL_LIB})
+endif()
 
 # We link libmock_curl instead of real libcurl in tests
 target_link_libraries(leatherman_test ${LEATHERMAN_TEST_LIBS})
