--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ env:
     - TRAVIS_TARGET=CPPCHECK
     - TRAVIS_TARGET=RELEASE
     - TRAVIS_TARGET=DEBUG
+    - TRAVIS_TARGET=SHARED_RELEASE
 deploy:
   provider: releases
   api_key:
