--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -6,6 +6,7 @@ add_leatherman_includes("${Boost_INCLUDE_DIRS}")
 leatherman_dependency(nowide)
 leatherman_dependency(logging)
 leatherman_dependency(util)
+leatherman_dependency(locale)
 
 if (BUILDING_LEATHERMAN)
     leatherman_logging_namespace("leatherman.logging")
