(maint) Fix linking errors with locale on Windows
Linking static Boost.Locale after shared Leatherman.Locale on Windows
leads to a "multiple definitions" error creating unit tests. Avoid it by
declaring the link order appropriately for LEATHERMAN_SHARED.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,13 @@ if (LEATHERMAN_LIBS)
     list(REMOVE_ITEM LEATHERMAN_DEPS ${LEATHERMAN_LIBS})
 endif()
 if (LEATHERMAN_LIBS OR LEATHERRMAN_DEPS)
-    list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
+    if (LEATHERMAN_SHARED)
+        # When using shared libraries, leave out dependencies as they're already handled in the shared libs.
+        # Including deps after the shared libraries can lead to "multiple definition" errors.
+        list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS})
+    else()
+        list(APPEND LEATHERMAN_LIBRARIES ${LEATHERMAN_LIBS} ${LEATHERMAN_DEPS})
+    endif()
 endif()
 if (LEATHERMAN_INCLUDE_DIRS)
     list(REMOVE_DUPLICATES LEATHERMAN_INCLUDE_DIRS)
