(LTH-95) Skip curl tests when using static library
When curl is a static library, we can't use the stubbing method used by
the Leatherman.curl tests. For now, skip running those tests when curl
is static. In the near future we'll start building Leatherman against a
curl DLL on Windows and use that for testing.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ build_script:
   - ps: 7z.exe a -t7z leatherman.7z C:\tools\leatherman\
 
 test_script:
-  - ps: if ($env:shared -eq "OFF") { ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } } }
+  - ps: ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
 
 environment:
   matrix:
