(LTH-96) Prevent locale files from being cleaned
Previously `make clean` would delete generated locale files. Prevent
that from happening, as the file generation is only meant as a
bootstrapping step; .po files are then checked in and updated over time.

This fix only works for `make`, as CMake's documentation notes it can't
be implemented for other generators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,7 @@ add_definitions(${LEATHERMAN_DEFINITIONS})
 add_definitions(-DLEATHERMAN_LOCALE_INSTALL="${CMAKE_INSTALL_PREFIX}/share/locale")
 
 file(GLOB_RECURSE ALL_LEATHERMAN_SOURCES */src/*.cc */inc/*.hpp)
-gettext_templates(${CMAKE_CURRENT_SOURCE_DIR}/locales ${ALL_LEATHERMAN_SOURCES})
-gettext_compile(${CMAKE_CURRENT_SOURCE_DIR}/locales share/locale)
+add_subdirectory(locales)
 
 add_leatherman_dir(catch EXCLUDE_FROM_VARS)
 add_leatherman_dir(nowide)
