(maint) Restore logging_on_message tests
The file was there, but not being used. This restores coverage to
logging::on_message. It simplifies the test structure and creates a
helper for initialization and cleanup. It also fixes an issue with using
a default initialized locale in testing that would've also been fixed by
LTH-95.

--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -25,5 +25,10 @@ else()
 endif()
 
 add_leatherman_library(src/logging.cc ${PLATFORM_SRCS})
-add_leatherman_test(tests/logging.cc tests/logging_stream.cc tests/logging_stream_lines.cc ${PLATFORM_TEST_SRCS})
+add_leatherman_test(
+    tests/logging.cc
+    tests/logging_stream.cc
+    tests/logging_stream_lines.cc
+    tests/logging_on_message.cc
+    ${PLATFORM_TEST_SRCS})
 add_leatherman_headers(inc/leatherman)
