(LTH-96) Add tests for logging with i18n
Adds tests for the logging macros with i18n and makes logging methods
static. Without this, logging method implementations can be collapsed
even when they differ due to macro redefinition, causing the new tests
to fail in strange ways. This appears to happen with GCC but not Clang.

The new `leatherman::logging::log` specialization also switches to
explicitly calling `leatherman::locale::translate`. On Windows when
building with shared libraries, that requires each library to link
against locale to make `translate` available.

--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 
 add_leatherman_includes("${CURL_INCLUDE_DIRS}")
 
+leatherman_dependency(locale)
 leatherman_dependency(logging)
 leatherman_dependency(util)
 add_leatherman_deps(${CURL_LIBRARIES} ${CURL_DEPS})
