--- a/file_util/CMakeLists.txt
+++ b/file_util/CMakeLists.txt
@@ -4,6 +4,7 @@ add_leatherman_deps("${Boost_LIBRARIES}")
 add_leatherman_includes("${Boost_INCLUDE_DIRS}")
 
 leatherman_dependency(nowide)
+leatherman_dependency(locale)
 leatherman_dependency(logging)
 leatherman_dependency(util)
 
