(maint) Skip Leatherman.curl tests on Windows
On Windows, mocking libcurl doesn't work in the same fashion it's been
done for other platforms. The only scenario where it does work is when
using static Leatherman libraries and a shared libcurl library. When both
are shared libraries, leatherman_curl.dll depends directly on
libcurl-4.dll, so introducing a mocking dll has no effect.

For now, skip Leatherman.curl tests when they're expected to fail.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,13 @@ if (LEATHERMAN_TOPLEVEL)
     include(cflags)
 endif()
 
+if (${LEATHERMAN_SHARED} AND (WIN32 OR ${CURL_STATIC}))
+    set(MOCK_CURL FALSE)
+else()
+    set(MOCK_CURL TRUE)
+endif()
+defoption(LEATHERMAN_MOCK_CURL "Use mock curl library for testing Leatherman.curl" ${MOCK_CURL})
+
 add_definitions(${LEATHERMAN_DEFINITIONS})
 add_definitions(-DLEATHERMAN_LOCALE_INSTALL="${CMAKE_INSTALL_PREFIX}/share/locale")
 
