(PCP-426) Trivial unit tests for Util::Timer
Adding simple unit tests for the sake of exercising the class methods.

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -29,5 +29,6 @@ add_leatherman_test(
     tests/strings_test.cc
     tests/option_set.cc
     tests/environment.cc
+    tests/timer.cc
     ${PLATFORM_TESTS}
     )
