(LTH-106) Add function to get ProgramData
This commit adds a function to get ProgramData using SHGetKnownFolderPath
from Windows API.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -14,6 +14,7 @@ if (BUILDING_LEATHERMAN)
 endif()
 
 set(WINDOWS_UTIL_SOURCES
+  "src/file_util.cc"
   "src/registry.cc"
   "src/process.cc"
   "src/user.cc"
