(LTH-106) Add windows file_util tests
This commit adds a test for the get_programdata_dir function in the
windows file_util namespace.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -24,3 +24,4 @@ set(WINDOWS_UTIL_SOURCES
 
 add_leatherman_library(${WINDOWS_UTIL_SOURCES})
 add_leatherman_headers(inc/leatherman)
+add_leatherman_test(tests/file_utils_test.cc)
