(maint) Switch to using compressed vendored libraries
Switches to using compressed vendored libraries to make git history less
noisy when changing versions. Also simplify CMake files for vendored
libraries with a new macro, and add a custom target for dependencies
between components.

nowide is left as a special case, because we actually compile it. It's a
hybrid library that was easier to package as part of Leatherman than
split out its won packaging.

Also exclude external project src directory from coverage results to
avoid adding vendored files, and update COVERALLS options to use
Clang-compatible configuration (i.e. don't link against gcov).

--- a/catch/CMakeLists.txt
+++ b/catch/CMakeLists.txt
@@ -1,13 +1,1 @@
-if (BUILDING_LEATHERMAN)
-    # Just point the user at our vendored catch. Nothing else to do here
-    set(include_dir "${PROJECT_SOURCE_DIR}/vendor/catch/include")
-    set(${include_var} ${include_dir} PARENT_SCOPE)
-
-    # Because we're weird and vendored, we need to bypass the normal
-    # leatherman install helpers.
-    if (LEATHERMAN_INSTALL)
-        install(FILES "${include_dir}/catch.hpp" DESTINATION "include/leatherman/vendor/catch")
-    endif()
-else()
-    set(${include_var} "${LEATHERMAN_PREFIX}/include/leatherman/vendor/catch")
-endif()
+add_leatherman_vendored("catch-1.4.0.zip" "71b8d1b08ff8da54928521742ffaf448" "include")
