--- a/rapidjson/CMakeLists.txt
+++ b/rapidjson/CMakeLists.txt
@@ -1,10 +1,1 @@
-if (BUILDING_LEATHERMAN)
-    set(include_dir "${PROJECT_SOURCE_DIR}/vendor/rapidjson/include")
-    set(${include_var} ${include_dir} PARENT_SCOPE)
-
-    if(LEATHERMAN_INSTALL)
-        install(DIRECTORY "${include_dir}" DESTINATION "include/leatherman/vendor/rapidjson")
-    endif()
-else()
-    set(${include_var} "${LEATHERMAN_PREFIX}/include/leatherman/vendor/rapidjson/include")
-endif()
+add_leatherman_vendored("rapidjson-1.0.2.zip" "fcb0beba59fc4e1e118a57413503e474" "include")
