(maint) Add support for static Boost with ICU
Pulls in the FindICU module from
https://github.com/julp/FindICU.cmake#6fc73154d70b6611027f5475296386c3e66851af

Enabled by setting LEATHERMAN_USE_ICU.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ defoption(LEATHERMAN_DEBUG "Enable verbose logging messages from leatherman macr
 defoption(LEATHERMAN_ENABLE_TESTING "Build the leatherman test binary" ${LEATHERMAN_DEFAULT_ENABLE})
 defoption(LEATHERMAN_INSTALL "Install the leatherman libraries and headers" ${LEATHERMAN_DEFAULT_ENABLE})
 defoption(LEATHERMAN_SHARED "Create shared libraries instead of static" FALSE)
+defoption(LEATHERMAN_USE_ICU "Set when Boost is built with ICU" FALSE)
 
 set(BUILDING_LEATHERMAN TRUE)
 
